# Trading-Strategy-Development-Implementation

./: LICENSE  Quantum_Price_Levels_Calc.ipynb  README.md  model_weights.json  retrain_model.py  scaler_info.json  transition_data_acq.py
trading_bot/: README.md
trading_bot/examples/: json_array_parse.cpp  json_parse.cpp  multiple_get_requests.cpp  multiple_ws_non_blocking.cpp  single_get_request.cpp  single_ws_blocking.cpp
trading_bot/workspace/: CMakeLists.txt  README.md  arrayUtils.h  exceptUtils.h  httpUtils.cpp  httpUtils.h  ioUtils.h  jsonUtils.cpp  jsonUtils.h  modelUtils.cpp  modelUtils.h  ntpUtils.cpp  ntpUtils.h  qpl_bot_strategy_equities.cpp  socketUtils.cpp  socketUtils.h  sumapUtils.h  tradingBot.cpp  tradingBot.h  wsUtils.cpp  wsUtils.h
